# mipsy

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  bar.s  data.s  example.s  foo.s  kern.s  mips.yaml  package.json  playwright.config.ts
crates/mipsy/: Cargo.toml  build.rs
crates/mipsy/src/: main.rs
crates/mipsy_codegen/: Cargo.toml
crates/mipsy_codegen/src/: base.rs  lib.rs  meta.rs  yaml_model.rs
crates/mipsy_interactive/: Cargo.toml
crates/mipsy_interactive/src/: lib.rs
crates/mipsy_interactive/src/interactive/: error.rs  helper.rs  mod.rs  prompt.rs  runtime_handler.rs
crates/mipsy_interactive/src/interactive/commands/: back.rs  breakpoint.rs  breakpoints.rs  commands.rs  context.rs  decompile.rs  disassemble.rs  dot.rs  examine.rs  exit.rs  help.rs  label.rs  labels.rs  load.rs  mod.rs  print.rs  reset.rs  run.rs  step.rs  step2input.rs  step2syscall.rs  util.rs  watchpoint.rs
crates/mipsy_lib/: Cargo.toml
crates/mipsy_lib/src/: lib.rs  util.rs
crates/mipsy_lib/src/compile/: breakpoints.rs  bytes.rs  checker.rs  data.rs  extra.rs  mod.rs  text.rs
crates/mipsy_lib/src/decompile/: mod.rs
crates/mipsy_lib/src/error/: mod.rs
crates/mipsy_lib/src/error/compiler/: mod.rs
crates/mipsy_lib/src/error/parser/: mod.rs
crates/mipsy_lib/src/error/runtime/: mod.rs
crates/mipsy_lib/src/error/util/: mod.rs
crates/mipsy_lib/src/inst/: instruction.rs  mod.rs  register.rs
crates/mipsy_lib/src/runtime/: mod.rs  state.rs  unsafe_cow.rs
crates/mipsy_parser/: Cargo.toml
crates/mipsy_parser/src/: attribute.rs  constant.rs  directive.rs  instruction.rs  label.rs  lib.rs  misc.rs  number.rs  parser.rs  register.rs
crates/mipsy_utils/: Cargo.toml
crates/mipsy_utils/src/: config.rs  expand.rs  lib.rs
crates/mipsy_web/: .gitignore  Cargo.toml  README.md  Trunk.toml  build_dev.sh  data.rs  index.html  package-lock.json  purge_tailwind.sh  rust-toolchain.toml  split.js  tailwind.config.js  test
crates/mipsy_web/_static/: index.html
crates/mipsy_web/_static/package/: package.json
crates/mipsy_web/_static/package/dev/: bundleInfo.json
crates/mipsy_web/_static/package/dev/vs/: loader.js
crates/mipsy_web/_static/package/dev/vs/base/worker/: workerMain.js
crates/mipsy_web/_static/package/dev/vs/basic-languages/abap/: abap.js
crates/mipsy_web/_static/package/dev/vs/basic-languages/apex/: apex.js
crates/mipsy_web/_static/package/dev/vs/basic-languages/azcli/: azcli.js
crates/mipsy_web/_static/package/dev/vs/basic-languages/bat/: bat.js
crates/mipsy_web/_static/package/dev/vs/basic-languages/bicep/: bicep.js
crates/mipsy_web/_static/package/dev/vs/basic-languages/cameligo/: cameligo.js
crates/mipsy_web/_static/package/dev/vs/basic-languages/clojure/: clojure.js
crates/mipsy_web/_static/package/dev/vs/basic-languages/coffee/: coffee.js
crates/mipsy_web/_static/package/dev/vs/basic-languages/cpp/: cpp.js
crates/mipsy_web/_static/package/dev/vs/basic-languages/csharp/: csharp.js
crates/mipsy_web/_static/package/dev/vs/basic-languages/csp/: csp.js
crates/mipsy_web/_static/package/dev/vs/basic-languages/css/: css.js
crates/mipsy_web/_static/package/dev/vs/basic-languages/dart/: dart.js
crates/mipsy_web/_static/package/dev/vs/basic-languages/dockerfile/: dockerfile.js
crates/mipsy_web/_static/package/dev/vs/basic-languages/ecl/: ecl.js
crates/mipsy_web/_static/package/dev/vs/basic-languages/elixir/: elixir.js
crates/mipsy_web/_static/package/dev/vs/basic-languages/flow9/: flow9.js
crates/mipsy_web/_static/package/dev/vs/basic-languages/freemarker2/: freemarker2.js
crates/mipsy_web/_static/package/dev/vs/basic-languages/fsharp/: fsharp.js
crates/mipsy_web/_static/package/dev/vs/basic-languages/go/: go.js
crates/mipsy_web/_static/package/dev/vs/basic-languages/graphql/: graphql.js
crates/mipsy_web/_static/package/dev/vs/basic-languages/handlebars/: handlebars.js
crates/mipsy_web/_static/package/dev/vs/basic-languages/hcl/: hcl.js
crates/mipsy_web/_static/package/dev/vs/basic-languages/html/: html.js
crates/mipsy_web/_static/package/dev/vs/editor/: editor.main.css  editor.main.nls.de.js  editor.main.nls.es.js  editor.main.nls.fr.js  editor.main.nls.it.js  editor.main.nls.ja.js  editor.main.nls.js  editor.main.nls.ko.js  editor.main.nls.ru.js  editor.main.nls.zh-cn.js  editor.main.nls.zh-tw.js
crates/mipsy_web/_static/package/esm/vs/basic-languages/: _.contribution.js  monaco.contribution.js
crates/mipsy_web/e2e_tests/: home.spec.ts  output.test.ts
crates/mipsy_web/scripts/: README  build_dev.sh  build_release.sh  deploy.sh  hot_reload_build.sh  serve.sh
crates/mipsy_web/src/: app.rs  lib.rs  main.rs  utils.rs  worker.rs
crates/mipsy_web/src/components/: about_modal.rs  banner.rs  color_picker.rs  data_segment.rs  decompiled.rs  dropdown.rs  heading.rs  mod.rs  modal.rs  navbar.rs  outputarea.rs  pagebackground.rs  registers.rs  settings_modal.rs  sourcecode.rs  toggle.rs
crates/mipsy_web/src/pages/main/: app.rs  mod.rs  state.rs  update.rs
crates/mipsy_web/src/state/: config.rs  mod.rs  state.rs  update.rs
crates/mipsy_web/static/: README.md  index.html  package.json  tailwind.css
mipsy/: Cargo.toml
mipsy/src/: main.rs
mipsy/src/error/: compile_error.rs  mod.rs  runtime_error.rs
mipsy/src/interactive/: command.rs  error.rs  mod.rs  prompt.rs  runtime_handler.rs
mipsy/src/interactive/commands/: back.rs  breakpoint.rs  breakpoints.rs  context.rs  decompile.rs  dot.rs  exit.rs  help.rs  label.rs  labels.rs  load.rs  mod.rs  print.rs  step.rs  step2input.rs  step2syscall.rs  util.rs
mipsy_interactive/: Cargo.toml
mipsy_interactive/src/interactive/: error.rs  mod.rs  prompt.rs  runtime_handler.rs
mipsy_interactive/src/interactive/commands/: breakpoint.rs  breakpoints.rs  decompile.rs  dot.rs  exit.rs  help.rs  label.rs  labels.rs  load.rs  mod.rs  print.rs  reset.rs  run.rs  step2syscall.rs  util.rs
mipsy_parser/: Cargo.toml
mipsy_parser/src/: directive.rs  instruction.rs  label.rs  lib.rs  misc.rs  number.rs  parser.rs  register.rs
(+409 files in other folders)
