[package]
name = "mipsy_lib"
version = "0.1.0"
authors = ["insou22 <zac.kologlu@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }  # for data deserialization
serde_yaml = "0.8"                                  #   - see mips.yaml
strsim = "0.10"                                     # for error-reporting - string similarity
case_insensitive_hashmap = "1.0.0"
mipsy_parser = { version = "0.1", path = "./mipsy_parser" }

[build-dependencies]
vergen = "3"

[workspace]
members = [
    "mipsy",
    "mipsy_parser",
]