[package]
name = "mipsy"
version = "0.1.0"
authors = ["insou22 <zac.kologlu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mipsy_lib = { version = "0.1.0", path = "../" }
mipsy_parser = { version = "0.1.0", path = "../mipsy_parser" }
clap = "3.0.0-beta.2"
rustyline = "6.3.0"
rustyline-derive = "0.3.1"
colored = "2"
shlex = "0.1.0" # 0.1.1 is latest, but I don't want # comments

[build-dependencies]
vergen = "3"