[package]
name = "mipsy_parser"
version = "0.1.0"
authors = ["insou22 <zac.kologlu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = { version = "6.1", features = ["alloc"] } # parser
nom_locate = "3" 

[build-dependencies]
vergen = "3"
