[package]
name = "mipsy"
version = "0.1.0"
authors = ["insou22 <zac.kologlu@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mipsy_lib = { version = "0.1.0", path = "../mipsy_lib" }
mipsy_parser = { version = "0.1.0", path = "../mipsy_parser" }
mipsy_interactive = { version = "0.1.0", path = "../mipsy_interactive" }
mipsy_utils = { version = "0.1.0", path = "../mipsy_utils" }
mipsy_instructions = { path = "../mipsy_instructions" }
clap = "3.0.0-beta.2"       # cli arg parsing
rustyline = "9.1.1"         # readline support for interactive mipsy
rustyline-derive = "0.3.1"  # for readline derive macro
colored = "2"               # for ansi colors
strip-ansi-escapes = "0.1"  # to strip color codes out for strlen calcs
shlex = "0.1.0"             # 0.1.1 is latest, but I don't want # comments
text_io = "0.1.8"           # to read values in, w/out per line

# test
mipsy_codegen = { version = "0.1", path = "../mipsy_codegen" }

[build-dependencies]
vergen = "3"
