[package]
name = "mipsy"
version = "0.1.0"
authors = ["insou22 <zac.kologlu@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mipsy_lib = { version = "0.1.0", path = "../mipsy_lib" }
mipsy_parser = { version = "0.1.0", path = "../mipsy_parser" }
mipsy_interactive = { version = "0.1.0", path = "../mipsy_interactive" }
mipsy_utils = { version = "0.1.0", path = "../mipsy_utils" }
mipsy_instructions = { version = "0.1.0", path = "../mipsy_instructions", features = ["rt_yaml"] }
clap = { version = "4.0.4", features = ["derive", "wrap_help"] } # cli arg parsing
colored = "2"     # for ansi colors
text_io = "0.1.8" # to read values in, w/out per line

[build-dependencies]
vergen = { version = "7.4.2", default-features = false, features = ["git"] } # for version info
