[package]
name = "mipsy_codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.19"
mipsy_instructions = { path = "../mipsy_instructions" }

[lib]
proc-macro = true
