[package]
name = "mipsy_interactive"
version = "0.1.0"
authors = ["insou22 <zac.kologlu@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mipsy_lib = { version = "0.1.0", path = "../mipsy_lib" }
mipsy_parser = { version = "0.1.0", path = "../mipsy_parser" }
mipsy_utils = { version = "0.1.0", path = "../mipsy_utils" }
mipsy_instructions = { path = "../mipsy_instructions", features = ["rt_yaml"] }
serde = { version = "1.0", features = ["derive"] }  # for data deserialization
serde_yaml = "0.8"                                  #   - see ~/.config/mipsy/config.yaml
rustyline = "10.0.0"         # readline support for interactive mipsy
rustyline-derive = "0.3.1"  # for readline derive macro
colored = "2"               # for ansi colors
strip-ansi-escapes = "0.1"  # to strip color codes out for strlen calcs
shlex = "0.1.0"             # 0.1.1 is latest, but I don't want # comments
text_io = "0.1.8"           # to read values in, w/out per line
dirs = "3.0"                # for user config directory

[build-dependencies]
vergen = "3"
