[package]
name = "mipsy_lib"
version = "0.1.0"
authors = ["insou22 <zac.kologlu@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }  # for data deserialization
serde_yaml = "0.8"                                        #   - see mips.yaml
strsim = "0.10"                                           # for error-reporting - string similarity
linked-hash-map = "0.5.4"                                 # for labels
colored = "2"                                             # for ansi colors
strip-ansi-escapes = "0.1"                                # to strip color codes out for strlen calcs
mipsy_parser = { version = "0.1", path = "../mipsy_parser" }
mipsy_utils  = { version = "0.1", path = "../mipsy_utils" }

[build-dependencies]
vergen = "3"
