[package]
name = "mipsy_parser"
version = "0.1.0"
authors = ["insou22 <zac.kologlu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7" # parser
serde = { version = "1.0", features = ["derive"] } 
nom_locate = { version = "4", git = "https://github.com/fflorent/nom_locate" } 

[build-dependencies]
vergen = "3"
