[package]
name = "mipsy_parser"
version = "0.1.0"
authors = ["insou22 <zac.kologlu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7" # parser
nom_locate = "4"
serde = { version = "1.0", features = ["derive"] } 

[build-dependencies]
vergen = "3"
