[package]
name = "mipsy_utils"
version = "0.1.0"
authors = ["insou22 <zac.kologlu@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }  # for data deserialization
serde_yaml = "0.8"                                  #   - see ~/.config/mipsy/config.yaml
dirs = "3.0"                                        # for user config directory and tilde expansion
