[package]
name = "mipsy_web"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.18"
mipsy_lib = { path = "../mipsy_lib" }
mipsy_codegen = { path = "../mipsy_codegen" }
mipsy_parser = { path = "../mipsy_parser" }
