[package]
name = "mipsy_web"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
yew = "0.18"
mipsy_lib = { path = "../mipsy_lib" }
mipsy_codegen = { path = "../mipsy_codegen" }
mipsy_parser = { path = "../mipsy_parser" }
mipsy_utils = { path = "../mipsy_utils" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = "1"
log = "0.4.14"
wasm-logger = "0.2.0"
git-version = "0.3.5"

[profile.release]
# less code to include into binary
panic = 'abort' 
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z' 
# optimization for size 
# opt-level = 's' 
# link time optimization using using whole-program analysis
lto = true 
